Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-20386

Segfault in QSGParticleSystem if ModelParticle declared empty

    XMLWordPrintable

Details

    • a1867e5c6229e171b0fac3e57b96295221f2ea0a

    Description

      Declaring an empty ModelParticle {} segfaults on creation. Setting the system prevents the crash.

      [Thread debugging using libthread_db enabled]
      Qml debugging is enabled. Only use this in a safe environment!
      Qt: gdb: -nograb added to command-line options.
               Use the -dograb option to enforce grabbing.
      ParticlePainter created without a particle system specified 
      [New Thread 0xb311fb70 (LWP 22706)]
      
      Program received signal SIGSEGV, Segmentation fault.
      [Switching to Thread 0xb311fb70 (LWP 22706)]
      0xb7d9d7ba in QSGParticleSystem::systemSync (this=0x0, p=0x81d4760) at particles/qsgparticlesystem.cpp:312
      312         if (!m_running)
      (gdb) bt
      #0  0xb7d9d7ba in QSGParticleSystem::systemSync (this=0x0, p=0x81d4760) at particles/qsgparticlesystem.cpp:312
      #1  0xb7d8ad32 in QSGModelParticle::prepareNextFrame (this=0x81d4760) at particles/qsgmodelparticle.cpp:229
      #2  0xb7d8acb3 in QSGModelParticle::updatePaintNode (this=0x81d4760, n=0x0, d=0x810f6ac) at particles/qsgmodelparticle.cpp:219
      #3  0xb7cab27b in QSGCanvasPrivate::updateDirtyNode (this=0x810f510, item=0x81d4760) at items/qsgcanvas.cpp:1861
      #4  0xb7caa5e8 in QSGCanvasPrivate::updateDirtyNodes (this=0x810f510) at items/qsgcanvas.cpp:1691
      #5  0xb7ca3f09 in QSGCanvasPrivate::syncSceneGraph (this=0x810f510) at items/qsgcanvas.cpp:389
      #6  0xb7cabbee in QSGCanvasRenderThread::run (this=0x8197c60) at items/qsgcanvas.cpp:2090
      #7  0xb5d136c7 in QThreadPrivate::start (arg=0x8197c60) at thread/qthread_unix.cpp:298
      #8  0xb5b8f96e in start_thread (arg=0xb311fb70) at pthread_create.c:300
      #9  0xb59c1a4e in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:130
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            aalpert-nokia Alan Alpert (closed Nokia identity) (Inactive)
            dajansen Damian Jansen (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes