Crash less

Can't run any particles without a system set. Just skip the
'prepareFrame' function in that case.

Task-Number: QTBUG-20386
Change-Id: I22332636084d1696d5aff5386a5ca4ff0f2f1866
Reviewed-on: http://codereview.qt.nokia.com/1680
Reviewed-by: Qt Sanity Bot <qt_sanity_bot@ovi.com>
Reviewed-by: Martin Jones <martin.jones@nokia.com>