src/declarative/particles/qsgmodelparticle.cpp
@@ -227,6 +227,8 @@ QSGNode* QSGModelParticle::updatePaintNode(QSGNode* n, UpdatePaintNodeData* d)
 
 void QSGModelParticle::prepareNextFrame()
 {
+    if (!m_system)
+        return;
     qint64 timeStamp = m_system->systemSync(this);
     qreal curT = timeStamp/1000.0;
     qreal dt = curT - m_lastT;
